# json2rdf-hs

./: .gitignore  JSON2RDF.hs  Main.hs  README.md  js2rdf.hs  json2rdf-hs.cabal  json2rdf.cabal
Control/Monad/RWS/Lazy/: Evaluable.hs
Control/Monad/Trans/RWS/Lazy/: Evaluable.hs
Data/: Canonical.hs  Described.hs  DescriptorTree.hs  Evaluated.hs
JSON2RDF/: Types.hs
JSON2RDF/Parser/: Text.hs
JSON2RDF/RDF/: Graph.hs
app/: Main.hs
src/: JSON2RDF.hs
src/Data/: Canonical.hs  DescriptorTree.hs
src/JSON2RDF/: Types.hs
src/JSON2RDF/Parser/: Text.hs
src/JSON2RDF/RDF/: Graph.hs
