name:
  json2rdf-hs
version:
  0.0.2
license:
  OtherLicense
license-file:
  UNLICENSE
author:
  Mark Borkum <mark.borkum@pnnl.gov>
maintainer:
  Mark Borkum <mark.borkum@pnnl.gov>
synopsis:
  Utility to convert a file from JSON to RDF format.
category:
  Web
stability:
  stable
cabal-version:
  >= 1.10
build-type:
  Simple
extra-source-files:
  README.md
homepage:
  https://github.com/markborkum/json2rdf-hs#readme
source-repository head
  type: git
  location: git+https://github.com/markborkum/json2rdf-hs.git

library
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    attoparsec,
    bytestring,
    containers,
    pretty,
    regex-posix,
    scientific,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    HTTP
  exposed-modules:
    Data.Canonical
    Data.Described
    Data.DescriptorTree
    Data.Evaluated
    JSON2RDF
    JSON2RDF.Parser.Text
    JSON2RDF.RDF.Graph
    JSON2RDF.Types
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable json2rdf
  main-is:
    Main.hs
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    attoparsec,
    bytestring,
    cmdargs,
    containers,
    json2rdf-hs,
    pretty,
    text,
    time
  ghc-options:
    -Wall
  hs-source-dirs:
    app
  default-language:
    Haskell2010
