name: json2rdf-hs
version: 0.0.1
license: UNLICENSE
license-file: UNLICENSE
author: Mark Borkum <m.i.borkum@soton.ac.uk>
maintainer: Mark Borkum <m.i.borkum@soton.ac.uk>
synopsis: Utility to convert a file from JSON to RDF format.
category: Web
stability: stable
cabal-version: >= 1.2
build-type: Simple
homepage: http://github.com/markborkum/json2rdf-hs/tree/master

executable json2rdf
    main-is: Main.hs
    build-depends: 
        base         >= 4     && < 5, 
        aeson        >= 0.6   && < 0.7, 
        cmdargs      >= 0.1   && < 0.2, 
        containers   >= 0.5   && < 0.6, 
        pretty       >= 1.1   && < 1.2, 
        regex-posix  >= 0.95  && < 0.96, 
        transformers >= 0.3   && < 0.4, 
        HTTP         >= 4000  && < 4001
    ghc-options: -Wall
